fixed footer for all pages and spacing on main text

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ nav ul li a:hover {
 
 .main, .panel {
     width: 100%;
-    height: 100vh;
     text-align: center;
     align-content: center;
     color: white;
@@ -49,6 +48,12 @@ nav ul li a:hover {
     background-color: white;
     color: black !important;
     align-content: start;
+    height: 100% !important;
+}
+
+.main {
+    padding-top: 15%;
+    padding-bottom: 15%;
 }
 
 .heading {
