--- a/years.css
+++ b/years.css
@@ -1,12 +1,3 @@
-.main {
-    padding-top: 6vh;
-    padding-bottom: 6vh;
-}
-
-.panel {
-    height: 100%;
-}
-
 .main, .panel {
     text-align: center;
 }
